--- a/search.html
+++ b/search.html
@@ -99,7 +99,7 @@
   </body>
   <footer>
     <div id="developer" class="container">
-      <address>Built and designed by Nicole Kelley</address>
+      <address>Built and designed by Nikhil Singh</address>
       <div class="developerLinks">
         <a href="https://github.com/nikhilmufc7"><i class="fa fa-2x fa-github link" aria-hidden="true"></i></a>
         <a href="https://in.linkedin.com/in/nikhil-singh7"><i class="fa fa-2x fa-linkedin link" aria-hidden="true"></i></a>
